# rust_esp32_std_spi_ili

./: Cargo.toml  README.md  history_00_rustup_update_cargo_generate.txt
.cargo/: config.toml
src/: main.rs
