[package]
name = "rust_esp32_std_spi_ili"
version = "0.1.0"
authors = ["prace@srbpavel.cz <prace@srbpavel.cz>"]
edition = "2021"
resolver = "2"
#rust-version = "1.73"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
#pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = ["esp-idf-svc/embassy-sync", "esp-idf-svc/critical-section", "esp-idf-svc/embassy-time-driver"]

[dependencies]
esp-idf-svc = { version = "0.47.3", features = ["experimental", "alloc"] }
esp-idf-sys = { version = "0.33.7", features = ["binstart"] }
esp-idf-hal = "0.42.5"
#embedded-svc = "0.26.4"
#embedded-hal = { version="0.2.7", features = ["unproven"] }
anyhow = "1"
log = "0.4"                                  
display-interface-spi = "0.4.1" 
mipidsi = "0.7.1"                     
ili9341 = "0.5.0"                                   
embedded-graphics = "0.8.0"                         
                                                    
[build-dependencies]
embuild = "0.31.3"
